--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "embla-carousel-react": "^8.6.0",
+    "fast-xml-parser": "^5.3.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
