--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.idea/copilotDiffState.xml
+.idea/GitCommitMessageStorage.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
+.vscode/launch.json
